import java.text.SimpleDateFormat

plugins {
    id 'java-library'
    id "org.jetbrains.kotlin.jvm" version "1.9.20"
    id 'com.adarshr.test-logger' version "3.2.0"
    id 'jacoco'
    //id 'com.github.kt3k.coveralls' version "$coveralls_version"
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

ext {
    kotlin_version = '1.9.20'
    kotlinx_version = '1.8.0'
    junit_version = '4.13.1'
    mockito_version = '3.12.4'
    jgoodies_version = '1.6.0'
    json_version = '20231013'
    commonsio_version = '2.14.0'
    apache_commons_version = '3.18.0'
    flatlaf_version = '1.5'
    jacoco_tool_version = '0.8.12'
    shadowjar_version = '8.1.1'
    testlogger_version = '3.2.0'
    coveralls_version = '2.12.0'
}

jacoco {
    toolVersion = "$jacoco_tool_version"
}

jacocoTestReport {
    reports {
        xml {
            required = true // coveralls plugin depends on xml format report
        }
        html {
            required = true
        }
    }
    afterEvaluate {
        // Exclude files that cannot be tested by jUnit (UI, Swing, ...)
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    'com/tibagni/logviewer/AppInfo*',
                    'com/tibagni/logviewer/LogViewerApplication*',
                    'com/tibagni/logviewer/LogViewerView*',
                    'com/tibagni/logviewer/MainView*',
                    'com/tibagni/logviewer/ServiceLocator*',
                    'com/tibagni/logviewer/VisibleLogsConfigurationDialog*',
                    'com/tibagni/logviewer/about/AboutDialog*',
                    'com/tibagni/logviewer/bugreport/BugReportView*',
                    'com/tibagni/logviewer/bugreport/section/ui*',
                    'com/tibagni/logviewer/filter/EditFilterDialog*',
                    'com/tibagni/logviewer/filter/FiltersList*',
                    'com/tibagni/logviewer/filter/FilterCellRenderer*',
                    'com/tibagni/logviewer/filter/regex/RegexEditorDialog*',
                    'com/tibagni/logviewer/log/LogCellRenderer*',
                    'com/tibagni/logviewer/logger/*',
                    'com/tibagni/logviewer.preferences.LogViewerPreferencesDialog*',
                    'com/tibagni/logviewer/theme/*',
                    'com/tibagni/logviewer/updates/UpdateAvailableDialog*',
                    'com/tibagni/logviewer/util/SwingUtils*',
                    'com/tibagni/logviewer/util/layout/*',
                    'com/tibagni/logviewer/util/scaling/*',
                    'com/tibagni/logviewer/view/*'
            ])
        }))
    }
}

def props = new Properties()
file("src/main/resources/properties/app.properties").withInputStream { props.load(it) }

version props.getProperty("version")

repositories {
    mavenCentral()
    flatDir {
        dirs 'libs'
    }
}

jar {
    manifest {
        attributes(
                'Built-By'       : System.properties['user.name'],
                'Build-Timestamp': new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSZ").format(new Date()),
                'Created-By'     : "Gradle ${gradle.gradleVersion}",
                'Build-Jdk'      : "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']})",
                'Build-OS'       : "${System.properties['os.name']} ${System.properties['os.arch']} ${System.properties['os.version']}",
                'Main-Class'     : "com.tibagni.logviewer.LogViewerApplication",
                'SplashScreen-Image' : "Images/splash.png"
        )
    }
}

dependencies {
    testImplementation "junit:junit:$junit_version"
    testImplementation "org.mockito:mockito-core:$mockito_version"
    implementation "com.jgoodies:jgoodies-forms:$jgoodies_version"
    implementation "org.json:json:$json_version"
    implementation "commons-io:commons-io:$commonsio_version"
    implementation "org.apache.commons:commons-lang3:$apache_commons_version"
    implementation "com.formdev:flatlaf:$flatlaf_version"
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_version"
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-swing:$kotlinx_version"
}

tasks.withType(JavaCompile).configureEach {
    options.release = 17
}

tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
    kotlinOptions {
        jvmTarget = "17"
    }
}